[package]
name = "headlines"
version = "0.1.0"
edition = "2021"

[dependencies]
blocking = "1.6.1"
chrono = "0.4.38"
color-eyre = "0.6.3"
crossterm = "0.27.0"
dotenv = "0.15.0"
log = "0.4.22"
newsapi = "0.6.0"
ratatui = "0.27.0"
readability = "0.3.0"
reqwest = {version = "0.12.5",  features = ["json", "blocking"] }
scraper = "0.19.0"
selectors = "0.25.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
simplelog = "0.12.2"
tokio = "1.38.0"
url = "2.5.2"
